Spacing fixes between post type search and alpha results

--- a/dev/custom-pages/azindex.scss
+++ b/dev/custom-pages/azindex.scss
@@ -138,6 +138,14 @@ $header-media-xs-url: '//www.ucf.edu/wp-content/uploads/2017/01/azindex-header-x
     padding: 0;
   }
 
+  .post-type-search-alpha {
+    margin-top: 30px;
+
+    @media (min-width: $screen-sm-min) {
+      margin-top: 50px;
+    }
+  }
+
   .post-search-heading {
     @include archer();
     display: inline-block;
